--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'samplemaster.html' %}
 {% block content %}
 {% load static %}
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="{% static 'images/01.jpg' %}" class="d-block w-100" alt="...">
@@ -21,6 +21,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </button>
-  </div>
+  </div> -->
+  
   
 {% endblock %}
