--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'images/style.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'images/style.css' %}"> bg image in django -->
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
                         <button type="button" class="btn btn-outline-warning rounded-pill me-1" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" id="appo">
-                            login
+                            Login / Signup
                         </button>
                     </div>
                 </form>
@@ -442,7 +442,7 @@
                             </li>
                         </ul>
                     </div>
-                    
+
                     <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase mb-4">Opening hours</h5>
 
@@ -481,23 +481,40 @@
 
 
 
-
+    <!-- login from -->
 
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 
         <div class="modal-dialog" role="document">
             <div class="modal-content rounded-5 shadow">
-                <div class="modal-header p-5 pb-4 border-bottom-0">
-                    <!-- <h5 class="modal-title">Modal title</h5> -->
-                    <h2 class="fw-bold mb-0">Login </h2>
+                <div class="modal-header p-2 pb-2 border-bottom-0">
+
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                         id="close"></button>
                 </div>
 
                 <div class="modal-body p-5 pt-0">
-                    <form class="">
-                        <div class="form-floating mb-3">
+                    <form class="form-signin text-center">
+                        <img class="mb-3" src="{% static 'images/logo.png' %}" alt="" width="100" height="100">
+                        <h1 class="h3 mb-3 font-weight-normal">Please Log in</h1>
+                        <label for="inputEmail" class="sr-only">Email address</label>
+                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required
+                            autofocus>
+                        <label for="inputPassword" class="sr-only">Password</label>
+                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" value="remember-me"> Remember me
+                            </label>
+                        </div>
+
+                        <button class="btn btn-lg btn-warning rounded-pill btn-block  w-50" type="submit">log
+                            in</button>
+                        <p class="mt-3">Not a member <button class="btn btn-primary rounded-pill" data-bs-toggle="modal"
+                                data-bs-target="#signUpmodal">signUp</button> </p>
+                        <p class="mt-3 mb-2 text-muted">&copy; 2018-2020</p>
+                        <!-- <div class="form-floating mb-3">
                             <input type="email" class="form-control rounded-4" id="floatingInput"
                                 placeholder="name@example.com">
                             <label for="floatingInput">Email address</label>
@@ -507,10 +524,10 @@
                                 placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
-                        <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
+                        <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">LOgin</button>
                         <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-                        <hr class="my-4">
-                        <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+                        <hr class="my-4"> -->
+                        <!-- <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
                         <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" type="submit">
                             <svg class="bi me-1" width="16" height="16">
                                 <use xlink:href="#twitter" />
@@ -528,14 +545,14 @@
                                 <use xlink:href="#github" />
                             </svg>
                             Sign up with GitHub
-                        </button>
+                        </button> -->
                     </form>
                 </div>
             </div>
         </div>
 
     </div>
-
+    <!-- end loging from -->
 
     <!-- appoinment -->
 
@@ -553,7 +570,10 @@
                 <div class="modal-body p-5 pt-0">
                     <form class="row g-3">
                         <div class="col-md-6">
-                            <input type="text" class="form-control" id="firstname" placeholder="Frist name">
+                            <input type="text" class="form-control" id="usernames" placeholder="Frist name">
+                            <h5 id="usercheck" style="color: red;">
+                                **Fristname is missing
+                            </h5>
                         </div>
                         <div class="col-md-6">
                             <input type="text" class="form-control" id="lastname" placeholder="Last name">
@@ -563,7 +583,20 @@
                                 placeholder="Phonenumber">
                         </div>
                         <div class="col-md-6">
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="em@il">
+                            <input type="email" class="form-control" id="email" placeholder="em@il">
+                        </div>
+
+                        <div class="col-md-6">
+                            <input type="password" class="form-control" id="password" placeholder="password">
+                            <h6 id="passcheck" style="color: red;">
+                                **Please Fill the password
+                            </h6>
+                        </div>
+                        <div class="col-md-6">
+                            <input type="password" class="form-control" id="conpassword" placeholder="confirmPassword">
+                            <h6 id="conpasscheck" style="color: red;">
+                                **Password didn't match
+                            </h6>
                         </div>
                         <div class="col-12">
                             <label for="inputAddress" class="form-label">Address</label>
@@ -595,7 +628,7 @@
                                 style="margin-top: 22px;">
                         </div>
                         <div class="d-grid gap-2 col-6 mx-auto">
-                            <button type="button" class="btn btn-warning rounded-pill ">SUBMIT</button>
+                            <button type="button" class="btn btn-warning rounded-pill " id="submitbtn">SUBMIT</button>
                         </div>
                     </form>
                 </div>
@@ -606,13 +639,75 @@
 
 
 
-
-    <!-- jqery modal -->
-
+    <!-- signup form -->
 
 
+    <div class="modal fade" id="signUpmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-5 shadow">
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-    
+                <form class="mx-1 mx-md-4">
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                        <div class="form-floating flex-fill">
+                            <input type="text" id="floatingInput" class="form-control" placeholder="Your Name" />
+                            <label id="floatingInput">Your Name</label>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                        <div class="form-floating flex-fill">
+                            <input type="email" id="floatingInput" class="form-control" placeholder="email.com"/>
+                            <label id="floatingInput">Your Email</label>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                        <div class="form-floating flex-fill mb-0">
+                            <input type="password" id="floatingInput" class="form-control" placeholder="password" />
+                            <label id="floatingInput">Password</label>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                        <div class="form-floating flex-fill mb-0">
+                            <input type="password" id="floatingInput" class="form-control" placeholder="Repeat password"/>
+                            <label id="floatingInput">Repeat your
+                                password</label>
+                        </div>
+                    </div>
+
+                    <div class="form-check d-flex justify-content-center mb-5">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                        <label class="form-check-label" for="form2Example3">
+                            I agree all statements in <a href="#!">Terms of service</a>
+                        </label>
+                    </div>
+
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                        <button type="button" class="btn btn-primary btn-lg">Register</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- end signup -->
+
+
+
+
+
+
+
+
+
 
 
 
@@ -650,7 +745,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="javascri.js"></script>
+    <script src="{% static 'js/form.js' %}"></script>
 </body>
 
 </html>
