--- a/app1/templates/master.html
+++ b/app1/templates/master.html
@@ -45,7 +45,7 @@
             <a class="nav-link active" href="about" id="ab">About Us</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="#services" id="ab">Services</a>
+            <a class="nav-link active" href="services" id="ab">Services</a>
           </li>
           <li class="nav-item ms-lg-2">
             <a class="nav-link active" href="#shop" id="ab">pet foods</a>
@@ -61,8 +61,8 @@
         <form class="d-flex">
           <div class="button">
 
-            <button type="button" class="btn btn-warning rounded-pill"> <i class="fas fa-phone"></i>+91
-              9746351731</button>
+            <a  class="btn btn-warning rounded-pill" href="tel:9746351731"><i class="fas fa-phone"></i>+91
+              9746351731</a>
 
             <button type="button" class="btn btn-dark me-1 rounded-pill" data-bs-toggle="modal"
               data-bs-target="#exampleModal" id="appo" style="color: #fff;">
