--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -34,8 +34,10 @@
                                 Appoinment
                             </button>
 
-                            <button type="button" class="btn btn-warning rounded-pill me-1"> <i
-                                    class="fas fa-phone"></i> Get call</button>
+
+                            <a class="btn btn-warning rounded-pill me-1" href="tel:9746351731"><i
+                                    class="fas fa-phone"></i>
+                                Get call</a>
                         </div>
                     </div>
                 </div>
@@ -64,9 +66,9 @@
                         </div>
                         <div class="slider-btn">
 
-                            <button type="button" id="butt" class="btn btn-warning rounded-pill me-1 w-25 fs-4"> <i
-                                    class="fas fa-phone">
-                                </i> Get call</button>
+                            <a class="btn btn-warning rounded-pill me-1" href="tel:9746351731"><i
+                                    class="fas fa-phone"></i>
+                                Get call</a>
                         </div>
                     </div>
                 </div>
@@ -315,73 +317,157 @@
             </div>
             <p class="text-center">"Urgent pet care is conveniently located to provide your pet!"</p>
             <div class="modal-body p-5 pt-0">
-                <form class="row g-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="firstnames" placeholder="First name">
-                        <h5 id="firstcheck" style="color: red;">
-                            **Firstname is missing
-                        </h5>
+                <h4>client/pet owner information</h4>
+                <form class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltip01" class="form-label">First name</label>
+                        <input type="text" class="form-control" id="validationTooltip01" value="" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid name.
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="lastnames" placeholder="Last name">
-                        <h5 id="lastcheck" style="color: red;">
-                            **lastname is missing
-                        </h5>
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltip02" class="form-label">Last name</label>
+                        <input type="text" class="form-control" id="validationTooltip02" value="" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid name.
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <input type="tel" class="form-control" name="phone" id="phonenumber" placeholder="Phone Number">
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltipUsername" class="form-label">phonenumber</label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" id="validationTooltipUsername"
+                                aria-describedby="validationTooltipUsernamePrepend" required>
+                            <div class="invalid-tooltip">
+                                Please choose a unique and valid phonenumber.
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <input type="email" class="form-control" id="email" placeholder="em@il">
-                        <small id="emailvalid" class="form-text
-                        text-muted invalid-feedback">
-                            Your email must be a valid email
-                        </small>
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltipUsername" class="form-label">Email</label>
+                        <div class="input-group has-validation">
+                            <input type="email" class="form-control" id="validationTooltipUsername"
+                                aria-describedby="validationTooltipUsernamePrepend" required>
+                            <div class="invalid-tooltip">
+                                Please choose a unique and valid email.
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="col-md-6">
-                        <input type="password" class="form-control" id="password" placeholder="password">
-                        <h6 id="passcheck" style="color: red;">
-                            **Please Fill the password
-                        </h6>
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Address.
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <input type="password" class="form-control" id="conpassword" placeholder="confirmPassword">
-                        <h6 id="conpasscheck" style="color: red;">
-                            **Password didn't match
-                        </h6>
+                    <div class="col-md-6 position-relative">
+                        <label for="validationTooltip05" class="form-label">Zip</label>
+                        <input type="text" class="form-control" id="validationTooltip05" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid zip.
+                        </div>
                     </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Appoinment date</label>
+                        <input type="date" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Appoinment Date.
+                        </div>
+                    </div>
+                    <div class="col-4 position-relative">
+                        <label for="validationTooltip03" class="form-label">Time</label>
+                        <input type="Time" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Time.
+                        </div>
+                    </div>
+                    <h4>Pet info</h4>
+                    <label for="validationTooltip04" class="form-label">Select your pet</label>
+                    <select class="form-select" id="validationTooltip04" required>
+                        <option selected disabled value="">Dog</option>
+                        <option>Cat</option>
+                        <option>Bird</option>
+                        <option>other</option>
+                    </select>
+                    <div class="invalid-tooltip">
+                        Please select a valid state.
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Petname</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid petname.
+                        </div>
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">pet breed</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid petbreed.
+                        </div>
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Appoinment date</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Appoinment Date.
+                        </div>
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Pet colour</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Pet colour.
+                        </div>
+                    </div>
+                    <div>
+                        <h6>Pet Sex</h6>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                value="option1" checked>
+                            <label class="form-check-label" for="exampleRadios1">
+                                male
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                                value="option2">
+                            <label class="form-check-label" for="exampleRadios2">
+                                Neutered Male
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                                value="option3">
+                            <label class="form-check-label" for="exampleRadios3">
+                                female
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                                value="option3">
+                            <label class="form-check-label" for="exampleRadios3">
+                                Spayed Female
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Pet Age /DOB</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Pet age.
+                        </div>
+                    </div>
+                    <div class="col-lg-6 position-relative">
+                        <label for="validationTooltip03" class="form-label">Pet Weight (kgs or ibs)</label>
+                        <input type="text" class="form-control" id="validationTooltip03" required>
+                        <div class="invalid-tooltip">
+                            Please provide a valid Pet Weight.
+                        </div>
+                    </div>
+                    
                     <div class="col-12">
-                        <label for="inputAddress" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                    </div>
-                    <div class="col-6">
-                        <label for="inputpet" class="form-label">Appoinment Date</label>
-                        <input type="date" class="form-control" placeholder="Appoinmentdate" name="Appointment request"
-                            required>
-                    </div>
-
-                    <div class="col-md-4">
-                        <label for="inputCity" class="form-label">Time</label>
-                        <input type="time" class="form-control" id="time">
-                    </div>
-
-                    <div class="col-md-6">
-                        <label for="inputpet" class="form-label">Select Your Pet</label>
-                        <select id="inputpet" class="form-select ">
-                            <option selected>Dog</option>
-                            <option>Cat</option>
-                            <option>Birds</option>
-                            <option>Others..</option>
-                        </select>
-                    </div>
-
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="inputZip" placeholder="zipcode"
-                            style="margin-top: 22px;">
-                    </div>
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <button type="button" class="btn btn-warning rounded-pill " id="submitbtn">SUBMIT</button>
+                        <button class="btn btn-primary" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
@@ -390,3 +476,7 @@
 
 </div>
 {% endblock %}
+
+<!-- <div class="d-grid gap-2 col-6 mx-auto">
+                        <button type="button" class="btn btn-warning rounded-pill " id="submitbtn">SUBMIT</button>
+                    </div> -->
